hydroflow/tests/compile-fail/surface_demux_port_extramissing.stderr
error: Argument specifying the output ports in `demux(..)` does not contain extra port `d`: ($DIR/tests/compile-fail/surface_demux_port_extramissing.rs:14:18) (1/2).
 --> tests/compile-fail/surface_demux_port_extramissing.rs:5:55
  |
5 |         my_demux = source_iter(0..10) -> demux(|item, varg!(a, b, c)| {
  |                                                       ^^^^^^^^^^^^^^

error: Port `d` not found in the arguments specified in `demux(..)`'s closure: ($DIR/tests/compile-fail/surface_demux_port_extramissing.rs:5:55) (2/2).
  --> tests/compile-fail/surface_demux_port_extramissing.rs:14:18
   |
14 |         my_demux[d] -> for_each(std::mem::drop);
   |                  ^

error: `demux(..)` closure argument `a` missing corresponding output port.
 --> tests/compile-fail/surface_demux_port_extramissing.rs:5:61
  |
5 |         my_demux = source_iter(0..10) -> demux(|item, varg!(a, b, c)| {
  |                                                             ^

warning: unused import: `varg`
 --> tests/compile-fail/surface_demux_port_extramissing.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, varg};
  |                                   ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
